# Hemming-codes

./: CMakeLists.txt  main.c
libs/Hemming/: hemming.c  hemming.h
libs/HemmingL/: hemmingL.c  hemmingL.h
libs/menu/: menu.c  menu.h
libs/message/: message.c  message.h
libs/test/: testHemming.c  testHemming.h  testHemmingL.c  testHemmingL.h  testMessage.c  testMessage.h
